--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,11 +11,24 @@
             <description>You need to login to access this resources</description>
             <url-pattern>/add</url-pattern>
             <url-pattern>/login</url-pattern>
+            <url-pattern>/profile</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
         <auth-constraint>
             <role-name>user</role-name>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Auth</web-resource-name>
+            <description>You need to be admin to access this resources</description>
+            <url-pattern>/admin</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <auth-constraint>
             <role-name>admin</role-name>
         </auth-constraint>
     </security-constraint>
